--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 streamlit==1.30.0
 pandas==2.0.0
 streamlit_option_menu==0.3.6
-scikit-learn
+scikit-learn==1.3.0
 numpy
-seaborn==0.12.2
+seaborn
 matplotlib==3.7.2
 pdfplumber==0.11.4
 PyPDF2==2.12.1
+beautifulsoup4==4.12.3
+gensim==3.6.0
+nltk==3.8.1
+transformers==4.47.1
+torch
