--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit==1.30.0
 pandas==2.0.0
 streamlit_option_menu==0.3.6
 scikit-learn==1.3.0
+scipy== 1.10.1
 numpy
 seaborn
 matplotlib==3.7.2
