--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ nltk==3.8.1
 transformers
 torch
 scipy
-fpdf==1.7.2
+fpdf
 google-generativeai==0.8.3
 google-api-python-client==2.48.0
 pdfkit==1.0.0
